# odysseus

./: app.py  generate_google_token.py  pyproject.toml  requirements.txt
core/: database.py
mcp_servers/: email_server.py
routes/: api_token_routes.py  calendar_routes.py  chat_helpers.py  chat_routes.py  cookbook_helpers.py  cookbook_routes.py  email_helpers.py  email_routes.py  google_oauth_routes.py  model_routes.py  session_routes.py
scripts/: odysseus-mail
services/memory/: skill_extractor.py
src/: agent_continuations.py  agent_loop.py  agent_runs.py  agent_tools.py  bg_monitor.py  bg_task_progress.py  builtin_actions.py  chat_inject.py  google_calendar_sync.py  google_calendar_writeback.py  google_token_service.py  llm_core.py  prompt_budget.py  settings.py  task_scheduler.py  tool_execution.py  tool_implementations.py  tool_index.py
static/: index.html  style.css
static/js/: admin.js  calendar.js  chat.js  chatRenderer.js  cookbook-diagnosis.js  cookbook-hwfit.js  cookbook.js  cookbookDownload.js  cookbookRunning.js  cookbookServe.js  markdown.js  modelPicker.js  settings.js  skills.js
static/js/emailLibrary/: signatureFold.js
tests/: test_google_oauth_routes.py  test_google_token_service_web.py  test_prompt_budget.py  test_task_scheduler_session_delivery.py
